@@ -4,7 +4,10 @@ $datablock1 = {
                                   'major' => 1,
                                   'minor' => 1
                                 },
+                'inloop' => {},
+                'loops' => [],
                 'name' => 'unfolding',
+                'precisions' => {},
                 'tags' => [
                             '_unfolding_test'
                           ],
