@@ -4,6 +4,8 @@ $datablock1 = {
                                   'major' => 1,
                                   'minor' => 1
                                 },
+                'inloop' => {},
+                'loops' => [],
                 'name' => 'znvodata',
                 'precisions' => {
                                   '_chemical_formula_weight' => [
