@@ -1,3 +1,2 @@
 -:: WARNING, data block name ' ' was renamed to '_' as data block names cannot contain spaces at <script_name> line <line_no>.
 -:: WARNING, data block name 'multi&#10;line&#10;name' was renamed to 'multi_line_name' as data block names cannot contain spaces at <script_name> line <line_no>.
-data block name cannot be empty at <script_name> line <line_no>.
