@@ -18,6 +18,12 @@ cod-tools (3.0.0)
       - printing extracted file names to STDOUT instead of STDERR.
     - cif_validate:
       - validation messages are now output to STDOUT instead of STDERR.
+    - COD::CIF::Parser::Yapp:
+      - using COD::CIF::Tags::Manage::new_datablock() to ensure the structure
+        of each generated CIF data block structure.
+    - COD::CIF::Tags::Manage:
+      - allowing zero-length data block names in new_datablock() in order to
+        make it compatible with the usage in COD::CIF::Parser::Yapp.
     - COD::UserMessage:
       - the interface of print_message(), sprint_message(), note(), warning(),
         error() and debug_note() subroutines.
